--- a/src/views/pages/discussion.ejs
+++ b/src/views/pages/discussion.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
-<script src="/discussion.js" charset="utf-8"></script>
-<script src="/vendor.js" charset="utf-8"></script>
+<script src="/js/discussion.js" charset="utf-8"></script>
+<script src="/js/vendor.js" charset="utf-8"></script>
 </body>
 </html>
