--- a/src/views/pages/signup.ejs
+++ b/src/views/pages/signup.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Smoke -h</title>
-    <link rel="stylesheet" href="../../public/styles/global.css"/>
+    <link rel="stylesheet" type="text/css" href="http://localhost:3000/styles/global.css"/>
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
-<script src="/js/signup.js" charset="utf-8"></script>
+<script src="/js/signUp.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
 </body>
 </html>
