--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1,3 +1,64 @@
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
-    background:#213246;
+    background: #213246;
+}
+
+.nav-wrapper {
+    display: flex;
+    align-items: baseline;
+}
+
+nav {
+    padding-left: 9%;
+    padding-right: 2.5%;
+    padding-top: .5%;
+    background-color: rgba(0, 0, 0, 0);
+    display: inline-block;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.container {
+    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar-branches {
+    color: #3ba2fa;
+    font-family: 'Segoe UI';
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 36px;
+    margin: 1em;
+}
+
+.navbar-user {
+    color: #fc5185;
+    font-family: Arial, serif;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.lang {
+    color: #fc5185;
+    font-family: 'Segoe UI';
+    font-size: 21px;
+    font-weight: 700;
+    padding-left: 76px;
+}
+
+.navbar-user-image {
+    height: 100%;
 }
