--- a/src/views/pages/discussion.ejs
+++ b/src/views/pages/discussion.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Smoke -h</title>
+    <link type="text/css" rel="stylesheet" href=<%- url %>/styles/global.css>
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
