--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1,64 +1,54 @@
-
+body, html{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 * {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background: #213246;
-}
-
-.nav-wrapper {
-    display: flex;
-    align-items: baseline;
-}
-
-nav {
-    padding-left: 9%;
-    padding-right: 2.5%;
-    padding-top: .5%;
-    background-color: rgba(0, 0, 0, 0);
-    display: inline-block;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
+    background: #e4e4e4;
 }
 
 .container {
-    margin-left: auto;
-    display: flex;
-    flex-direction: row;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-.navbar-branches {
-    color: #3ba2fa;
-    font-family: 'Segoe UI';
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 36px;
-    margin: 1em;
-}
-
-.navbar-user {
-    color: #fc5185;
-    font-family: Arial, serif;
-    font-size: 24px;
-    font-weight: 400;
-}
-
-.lang {
-    color: #fc5185;
-    font-family: 'Segoe UI';
-    font-size: 21px;
-    font-weight: 700;
-    padding-left: 76px;
-}
-
-.navbar-user-image {
-    height: 100%;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: #666;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #ddd;
+  }
+  
+  li a.active {
+    color: white;
+    background-color: #4CAF50;
+  }
+  
+.main{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
