--- a/src/views/pages/discussion.ejs
+++ b/src/views/pages/discussion.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Smoke -h</title>
     <link type="text/css" rel="stylesheet" href=<%- url %>/styles/global.css>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
