--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -11,6 +11,10 @@ body {
     background: #e4e4e4;
 }
 
+
+
+/*discussion.jsx*/
+
 .main{
     margin: 0;
     position: absolute;
@@ -23,6 +27,8 @@ body {
     margin-top: 56px;
     position: relative;
 }
+
+/*NAVBAR.js*/
 
 .navbar{
     position: fixed;
@@ -42,6 +48,10 @@ body {
 
 .space{
     flex: 1;
+}
+
+.nav-user a{
+    padding-right: 0;
 }
 
 .nav-items ul{
@@ -75,7 +85,7 @@ body {
 }
 
 .toggle-button{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     height: 24px;
@@ -147,8 +157,32 @@ body {
     color: yellowgreen;
 }
 
+
+/*signup.jsx*/
+
+.form{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+@media (max-width: 1024px) {
+    .navigation{
+        padding: 0 4rem;
+    }
+}
+
 @media (max-width: 768px) {
-    .nav-items {
+    .nav-items li{
         display: none;
+    }
+    .navigation{
+        padding: 0 1rem;
+    }
+    .toggle-button{
+        display: flex;
     }
 }
