--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Smoke -h</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
