--- a/src/views/pages/signup.ejs
+++ b/src/views/pages/signup.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Smoke -h</title>
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/styles/global.css"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
