--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Smoke -h</title>
+    <title>C4</title>
+    <link type="text/css" rel="stylesheet" href='/styles/global.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
