--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -33,7 +33,7 @@ body {
 .navbar{
     position: fixed;
     width: 100%;
-    background: #564ec9;
+    background: #6C63FF;
     top: 0;
     left: 0;
     height: 56px;
@@ -78,10 +78,6 @@ body {
     color: white;
     font-size: 1.2rem;
     text-decoration: none;
-}
-.nav-items a:hover,
-.nav-items a:active{
-    color: yellowgreen;
 }
 
 .toggle-button{
@@ -147,16 +143,10 @@ body {
 }
 
 .side-drawer a{
-    color: #564ec9;
+    color: #6C63FF;
     text-decoration: none;
     font-size: 1.2rem;
 }
-
-.side-drawer a:hover,
-.side-drawer a:active {
-    color: yellowgreen;
-}
-
 
 /*signup.jsx*/
 
@@ -167,6 +157,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 
 
 @media (max-width: 1024px) {
