--- a/src/views/pages/discussion.ejs
+++ b/src/views/pages/discussion.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Smoke -h</title>
-    <link type="text/css" rel="stylesheet" href=<%- url %>/styles/global.css>
+    <link type="text/css" rel="stylesheet" href='/styles/global.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
