--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -11,8 +11,151 @@ body {
     background: #e4e4e4;
 }
 
+/*index.jsx*/
 
+.index-container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 7rem;
+    padding: 0 2rem;
+}
 
+.programmer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.programmer img{
+    width: 500px;
+}
+
+.login-container{
+    display: flex;
+    align-items:center;
+    text-align:center;
+}
+
+form{
+    width: 250px;
+}
+
+.avatar{
+    width:150px;
+}
+
+form h2{
+    font-size: 2.9rem;
+    text-transform: uppercase;
+    margin-top:15px;
+    margin-bottom: 10px;;
+    color:  #6C63FF;
+}
+
+.input-div{
+    position: relative;
+    display: grid;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 3px solid #555;
+    width: 100%;
+}
+
+.input-div:after, .input-div:before{
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    width: 50%;
+    height: 2px;
+    border-bottom: 3px solid #6C63FF;
+    transition: border-bottom 0.3s ease-in;
+}
+
+.input-div:after{
+    left: 50%;
+}
+
+.input-div:before{
+    right:50%;
+}
+
+.input-div.focus>div>h5{
+    top: -5px;
+    font-size: 15px;
+}
+
+.input-div.focus:after, .input-div:before{
+    width: 50%;
+}
+
+.elements h5{
+    width: 100%;
+}
+
+.input-div.one{
+    margin-top:0
+}
+
+.input-div.two{
+    margin-bottom: 4px;
+}
+
+.input-div > div{
+    position: relative;
+    height: 45px;
+}
+
+.input-div >div >h5{
+    position: absolute;
+    left:10px;
+    top:50%;
+    color: #999;
+    font-size: 18px;
+    transition: .3s;
+}
+
+input{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    top:0;
+    left:0;
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0.5rem 0.7rem;
+    font-size:1.2rem;
+    color: #555;
+}
+
+a{
+    text-decoration: none;
+}
+
+.forgotPassword{
+    padding-top: 3px;
+}
+
+.btn{
+    display: block;
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 8px;
+    margin: 1.5rem 0;
+    font-size: 1.2rem;
+    outline: none;
+    border-color: #6C63FF;
+    color: #6C63FF;
+}
+
+.btn:hover{
+    background-color: #6C63FF;
+    color: #e4e4e4;
+    transition: background-color 0.3s ease-in,
+                color 0.3s ease-in;
+}
 /*discussion.jsx*/
 
 .main{
