--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -340,13 +340,20 @@ header{
 }
 
 /*signup.jsx*/
-
-.form{
+.main-container{
+    height: 100%;
+    width: 100%;
+}
+.sign-container {
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(2,1fr);
 }
 
 
