--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -9,5 +9,6 @@
 <div id="root"><%- reactApp %></div>
 <script src="/js/index.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
+<script src="/myJs/index.js" charset="utf-8"></script>
 </body>
 </html>
