--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -162,6 +162,27 @@ a{
                 color 0.3s ease-in;
 }
 
+.sign-btn{
+    display: block;
+    width: 6.5rem;
+    height: 2.5rem;
+    border-radius: 8px;
+    outline:none;
+    border-color: #6C63FF;
+    color: #6C63FF;
+    float: right;
+    font-size: 1rem;
+    margin-right: 5rem;
+    margin-top: 3rem;;
+}
+
+.sign-btn:hover{
+    background-color: #6C63FF;
+    color: #e4e4e4;
+    transition: background-color 0.3s ease-in,
+                color 0.3s ease-in;
+}
+
 @media screen and (max-width: 1050px){
 	.index-container{
 		grid-gap: 5rem;
