--- a/src/views/pages/signup.ejs
+++ b/src/views/pages/signup.ejs
@@ -3,11 +3,12 @@
 <head>
     <title>Smoke -h</title>
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/styles/global.css"/>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
 <script src="/js/signUp.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
+<script src="/myJs/index.js" charset="utf-8"></script>
 </body>
 </html>
