Clean up discussion -> now home

--- a/src/views/pages/signup.ejs
+++ b/src/views/pages/signup.ejs
@@ -9,6 +9,6 @@
 <div id="root"><%- reactApp %></div>
 <script src="/js/signUp.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
-<script src="/myJs/index.js" charset="utf-8"></script>
+<script src="/myJs/animate-input.js" charset="utf-8"></script>
 </body>
 </html>
