--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
-<script src="/js/discussion.js" charset="utf-8"></script>
+<script src="/js/home.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
 </body>
 </html>
