--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -410,3 +410,26 @@ header {
         display: flex;
     }
 }
+
+/*cardh.js*/
+
+.card {
+    width: 100%;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #555;    
+}
+
+.card-fluid {
+    padding: 1rem;
+    display: flex;
+}
+
+.topic {
+    width: 60%;
+}
+
+.latest {
+    width: 40%
+}
