--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -414,7 +414,7 @@ header {
 /*cardh.js*/
 
 .card {
-    width: 100%;
+    margin: 0 15rem;
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
@@ -428,8 +428,59 @@ header {
 
 .topic {
     width: 60%;
+    font-size: 1rem;
+}
+
+.topic-header {
+    width: fit-content;
+    display: flex;
+}
+
+.topic-logo {
+    width: 50%;
+}
+
+.topic-name {
+    width: fit-content;
+    color: #6C63FF;
+    font-weight: bold;
+}
+
+.topic-description {
+    color: #555;
+}
+
+.threads-blogs {
+    padding-top: 0.5rem;
+    display: flex;
+    width: 35%;
+}
+
+.threads{
+    display: flex;
+    width: 50%;
+}
+
+.tb-sign {
+    width: fit-content;
+}
+
+.tb {
+    width: fit-content;
+}
+
+.blogs {
+    padding-left: 1rem;
+    display: flex;
+    width: 50%;
 }
 
 .latest {
-    width: 40%
+    width: 40%;
+}
+
+@media (max-width: 1024px) {
+    .tb {
+        font-size: 0.5rem;
+    }
 }
