--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -415,10 +415,19 @@ header {
 
 .card {
     margin: 0 15rem;
-    border-radius: 4px;
     border-width: 1px;
+    margin-bottom: -1px;
+    margin-top: -1px;
     border-style: solid;
-    border-color: #555;    
+    border-color: #555;
+    transform: scale(1);
+    background-color: #e4e4e4;
+    transition: transform 0.3s ease-in;
+}
+
+.card:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in;
 }
 
 .card-fluid {
@@ -432,41 +441,58 @@ header {
 }
 
 .topic-header {
-    width: fit-content;
     display: flex;
 }
 
 .topic-logo {
-    width: 50%;
+    width: fit-content;
+}
+
+.topic-logo img{
+    width: 20px;
 }
 
 .topic-name {
-    width: fit-content;
     color: #6C63FF;
     font-weight: bold;
+    align-self: center;
+    font-size: 20px;
+    padding-left: 1rem;
 }
 
 .topic-description {
-    color: #555;
+    color: #999;
+    font-size: 20px;
 }
 
 .threads-blogs {
     padding-top: 0.5rem;
     display: flex;
-    width: 35%;
+    width: 70%;
 }
 
 .threads{
     display: flex;
-    width: 50%;
+    width: 35%;
 }
 
 .tb-sign {
     width: fit-content;
 }
 
+.tb-sign img{
+    width: 15px;
+}
+
+.tb img{
+    width: 20px;
+}
+
 .tb {
-    width: fit-content;
+    font-size: 1rem;
+    margin-top: 3px;
+    color: #6C63FF;
+    margin-left: 3px;
 }
 
 .blogs {
@@ -477,10 +503,54 @@ header {
 
 .latest {
     width: 40%;
+    display: flex;
+    height: inherit;
+    font-size: 1rem;
+}
+
+.latest-user-img {
+    display: flex;
+    width: 20%;
+    height: 100%;
+    justify-content: center;
+}
+
+.latest-user-img img{
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+}
+
+.query {
+    color: rgb(153, 148, 236);
+    font-weight: 10px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.user-name {
+    color: #999;
+}
+
+.time {
+    color: #6C63FF;
 }
 
 @media (max-width: 1024px) {
-    .tb {
-        font-size: 0.5rem;
+    .card {
+        width: 100%;
+        margin: -1px 0;
+    }
+
+    .topic-description{
+        font-size: 1rem;
+    }
+
+    .query {
+        font-size: 1.2rem;
+    }
+
+    .latest {
+        padding-left: 10px;
     }
 }
