--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -4,7 +4,6 @@ body, html {
 }
 
 * {
-    padding: 0;
     margin: 0;
 }
 
@@ -72,6 +71,7 @@ form h2 {
 .input-div:after, .input-div:before {
     content: '';
     position: absolute;
+    z-index: 1;
     bottom: -2px;
     width: 50%;
     height: 2px;
@@ -80,8 +80,8 @@ form h2 {
 }
 
 input:-webkit-autofill {
-    -webkit-text-fill-color:#555 !important;
-    background-color: #e4e4e4 !important;
+    -webkit-text-fill-color: #555 !important;
+    background-color: rgba(0, 0, 0, 0) !important;
 }
 
 .input-div:after {
@@ -93,7 +93,7 @@ input:-webkit-autofill {
 }
 
 .input-div.focus > div > h5 {
-    top: 0;
+    top: -15px;
     font-size: 15px;
     color: #6C63FF;
 }
@@ -121,11 +121,15 @@ input:-webkit-autofill {
 
 .input-div > div > h5 {
     position: relative;
-    right: 35%;
+    text-align: left;
     top: 50%;
     color: #999;
     font-size: 18px;
     transition: .3s;
+}
+
+.input {
+    padding: 0 0.7rem;
 }
 
 input {
@@ -134,10 +138,10 @@ input {
     height: 100%;
     top: 0;
     left: 0;
+    margin: 0.5rem 0;
     border: none;
     outline: none;
     background: none;
-    margin: 0.5rem 0.7rem;
     font-size: 1.2rem;
     color: #555;
 }
@@ -229,7 +233,7 @@ a {
 /*home.jsx*/
 
 
-.center{
+.center {
     width: 100%;
 }
 
@@ -242,7 +246,7 @@ a {
     display: flex;
 }
 
-.rendered-values{
+.rendered-values {
     margin-top: 7rem;
     position: relative;
     margin-left: 5rem;
@@ -250,11 +254,11 @@ a {
     display: flex;
 }
 
-.info{
+.info {
     display: flex;
 }
 
-.question{
+.question {
     color: rgb(68, 68, 68);
     font-size: 2rem;
     text-align: center;
@@ -264,7 +268,7 @@ a {
     width: 20%;
 }
 
-.cards{
+.cards {
     width: 60%
 }
 
@@ -306,7 +310,7 @@ header {
     flex: 1;
 }
 
-.nav-user a{
+.nav-user a {
     padding-left: 10rem;
     padding-right: 0;
 }
@@ -448,8 +452,8 @@ header {
     }
 }
 
-@media(max-width: 320px){
-    .nav-logo a{
+@media (max-width: 320px) {
+    .nav-logo a {
         font-size: 18px;
     }
 }
@@ -490,7 +494,7 @@ header {
     width: fit-content;
 }
 
-.topic-logo img{
+.topic-logo img {
     width: 30px;
 }
 
@@ -515,29 +519,29 @@ header {
     width: 70%;
 }
 
-.threads-blogs-tb{
+.threads-blogs-tb {
     width: 20%;
 }
 
-.threads{
+.threads {
     display: flex;
     width: 35%;
 }
 
-.threads-tb{
+.threads-tb {
     display: flex;
-    width:20%;
+    width: 20%;
 }
 
 .tb-sign {
     width: fit-content;
 }
 
-.tb-sign img{
+.tb-sign img {
     width: 20px;
 }
 
-.tb img{
+.tb img {
     width: 20px;
 }
 
@@ -583,13 +587,13 @@ header {
     justify-content: center;
 }
 
-.latest-user-img img{
+.latest-user-img img {
     width: 50px;
     height: 50px;
     border-radius: 4px;
 }
 
-.latest-user-img-tb img{
+.latest-user-img-tb img {
     width: 60px;
     height: 60px;
     border-radius: 4px;
@@ -597,7 +601,6 @@ header {
 
 .query {
     color: rgb(153, 148, 236);
-    font-weight: 10px;
     font-weight: bold;
     font-size: 20px;
 }
@@ -613,11 +616,11 @@ header {
 @media (max-width: 1024px) {
 
 
-    .topic-description{
+    .topic-description {
         font-size: 1rem;
     }
 
-    .tb{
+    .tb {
         font-size: 14px;
     }
 
@@ -639,13 +642,13 @@ header {
     .topic-logo {
         width: 17px;
     }
-    
-    .topic-logo img{
+
+    .topic-logo img {
         width: 100%;
     }
-    
+
     .topic-name {
-        font-size: 1rem ;
+        font-size: 1rem;
     }
 
     .topic-description {
@@ -661,7 +664,7 @@ header {
         padding-left: 10px;
     }
 
-    .query{
+    .query {
         font-size: 14px;
     }
 
@@ -680,8 +683,8 @@ header {
         width: 10px;
     }
 
-    .topic-logo img{
-        padding-top: 2.5px;   
+    .topic-logo img {
+        padding-top: 2.5px;
     }
 
     .topic-name {
@@ -689,7 +692,7 @@ header {
         font-size: 14px;
     }
 
-    .threads-blogs{
+    .threads-blogs {
         width: 100%;
     }
 
@@ -697,11 +700,11 @@ header {
         font-size: 12px;
     }
 
-    .tb-sign img{
+    .tb-sign img {
         width: 10px;
     }
 
-    .tb{
+    .tb {
         margin-top: 0;
         padding-top: 0;
     }
@@ -715,19 +718,19 @@ header {
 }
 
 @media (max-width: 375px) {
-    .threads-blogs{
+    .threads-blogs {
         margin-top: 0.5px;
     }
 
-    .threads{
+    .threads {
         width: 50%;
     }
 
-    .blogs{
+    .blogs {
         padding: 0 0;
     }
 
-    .tb{
+    .tb {
         font-size: 10px;
         justify-content: center;
     }
@@ -741,6 +744,7 @@ header {
     color: rgb(58, 51, 185);
     text-align: center;
 }
+
 .create-btn {
     display: block;
     width: 6.5rem;
@@ -751,7 +755,7 @@ header {
     color: #6C63FF;
     font-size: 1rem;
     position: relative;
-    
+
 }
 
 .create-btn:hover {
@@ -763,14 +767,14 @@ header {
 
 @media (max-width: 426px) {
 
-    .previous-heading{
+    .previous-heading {
         font-size: 2rem;
     }
 
 }
 
 @media (max-width: 375px) {
-    .previous-heading{
+    .previous-heading {
         font-size: 2rem;
     }
 }
