--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -81,7 +81,7 @@ form h2 {
 
 input:-webkit-autofill {
     -webkit-text-fill-color: #555 !important;
-    background-color: rgba(0, 0, 0, 0) !important;
+    background-color: #e4e4e4 !important;
 }
 
 .input-div:after {
@@ -171,6 +171,8 @@ a {
 }
 
 .sign-btn {
+    position: relative;
+    z-index: 30;
     display: block;
     width: 6.5rem;
     height: 2.5rem;
@@ -180,8 +182,8 @@ a {
     color: #6C63FF;
     float: right;
     font-size: 1rem;
-    margin-right: 5rem;
-    margin-top: 3rem;
+    margin-right: 3%;
+    margin-top: 3%;
 }
 
 .sign-btn:hover {
@@ -193,7 +195,11 @@ a {
 
 @media screen and (max-width: 1050px) {
     .index-container {
-        grid-gap: 5rem;
+        grid-gap: 3rem;
+    }
+
+    .programmer img{
+        width: 400px;
     }
 }
 
@@ -269,7 +275,7 @@ a {
 }
 
 .cards {
-    width: 60%
+    width: 60%;
 }
 
 @media (max-width: 768px) {
@@ -777,4 +783,35 @@ header {
     .previous-heading {
         font-size: 2rem;
     }
+}
+
+
+/*creatae.jsx*/
+
+.create-input{
+    position: relative;
+    align-self: center;
+    width: 100%;
+    height: 700px;
+}
+
+.create-text{
+    border-style: solid;
+    border-color: #555;
+    border-width: 1px;
+    width: 100%;
+    height: 700px;
+}
+
+.create-form {
+    position: relative;
+    margin: 25px 0;
+    padding: 5px 0;
+    width: 100%;
+    height: 700px;
+}
+
+.create-form h5{
+    float: right;
+    color: #555;
 }
