--- a/src/views/pages/create.ejs
+++ b/src/views/pages/create.ejs
@@ -9,5 +9,6 @@
 <div id="root"><%- reactApp %></div>
 <script src="/js/create.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
+<script src="/myJs/animate-input.js" charset="utf-8"></script>
 </body>
 </html>
