--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -258,6 +258,7 @@ a {
     margin-left: 5rem;
     margin-right: 5rem;
     display: flex;
+    justify-content: center;
 }
 
 .info {
@@ -891,3 +892,164 @@ header {
     float: right;
     color: #555;
 }
+
+/*blog.jsx*/
+
+.heading-blog{
+    width: 100%;
+    top: 20%;
+    left: 20%;
+    position: fixed;
+    z-index: -1;
+}
+
+.heading-blog h1{
+    color: #6C63FF;
+    font-size: 200px;
+    display: flex;
+}
+
+.text-blog{
+    position: fixed;
+    z-index: -1;
+}
+
+.text-blog p{
+    color: #555;
+    font-size: 50px;
+}
+
+.blog-svg{
+    z-index: -2;
+    position: fixed;
+    width: 100%;
+    top: 20rem;
+    left: 65rem;
+}
+
+.blog-svg img{
+    width: 45%;
+}
+
+.rendered-values-blogs{
+    height: 100%;
+    width: 100%;
+    margin-top: 907px;
+}
+
+
+/*blogb.js*/
+
+.blog-page{
+    width: 100%;
+    height: fit-content;
+    box-shadow: 0 0 2px #999;
+}
+
+.dev-div{
+    width: 100%;
+    height: 600px;
+    display: flex;
+}
+
+.dev-div:nth-child(odd){
+    background-color: #e4e4e4;
+}
+
+.dev-div:nth-child(even){
+    background-color:rgb(136, 130, 255);
+}
+
+.details{
+    width:60%;
+    margin: 0 0;
+    margin-top: 5rem;
+    margin-left: 3rem ;
+}
+
+.head{
+    width: fit-content;
+    border-bottom-style: solid;
+    border-width: 3px;
+    border-bottom-color: rgb(133, 133, 133);
+}
+
+.head-alt{
+    width: fit-content;
+    border-bottom-style: solid;
+    border-width: 3px;
+    border-bottom-color: rgb(196, 196, 196);
+}
+
+.head h1{
+    color: #6C63FF;
+    font-size: 100px;
+    padding-bottom: 4px;
+}
+
+.head-alt h1{
+    color: #e4e4e4;
+    font-size: 100px;
+    padding-bottom: 4px;
+}
+
+.head-details{
+    padding-top: 10px;
+    font-size: 36px;
+    color: rgb(160, 160, 160);
+}
+
+.head-details-alt{
+    padding-top: 10px;
+    font-size: 36px;
+    color: rgb(223, 221, 250);
+}
+
+.explore-btn {
+    display: block;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 4px;
+    margin: 9rem 0;
+    font-size: 1.2rem;
+    outline: none;
+    border-color: #6C63FF;
+    color: #6C63FF;
+}
+
+.explore-btn:hover{
+    background-color: #6C63FF;
+    color: #e4e4e4;
+    transition: background-color 0.3s ease-in-out,
+    color 0.3s ease-in-out;
+}
+
+.explore-btn-alt {
+    display: block;
+    width: 10rem;
+    height: 3rem;
+    border-radius: 4px;
+    margin: 9rem 0;
+    font-size: 1.2rem;
+    outline: none;
+    background-color: rgb(136, 130, 255);
+    border-color: #e4e4e4;
+    color: #e4e4e4;
+}
+
+.explore-btn-alt:hover{
+    background-color: #e4e4e4;
+    color: #6C63FF;
+    transition: background-color 0.3s ease-in-out,
+    color 0.3s ease-in-out;
+}
+
+.div-svg{
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.div-svg img{
+    width: 80%;
+}
+
