--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -479,6 +479,10 @@ header {
     .navigation {
         padding: 0 4rem;
     }
+
+    .nav-user{
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
@@ -1195,4 +1199,94 @@ header {
     .head-details-alt{
         font-size: 16px;
     }
+}
+
+/*user-card.js*/
+
+.user-card{
+    position: relative;
+    width: 290px;
+    height: 280px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+}
+
+.user-back{
+    position: relative;
+    width: 290px;
+    height: 120px;
+    background-color: rgb(191, 188, 245);
+    border-radius: 4px 4px 0px 0px;
+}
+
+.user-circle{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    margin-left: 90px;
+    margin-top: 65px;
+    border-radius: 100%;
+    background-color: rgb(191, 188, 245);
+    background-blend-mode: normal;
+    border: 5px solid #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.user-name{
+    width: 100%;
+    position: absolute;
+    height: 25px;
+    margin-top: 25%;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    font-size: 14px;
+    line-height: 180%;
+}
+
+.user-details-home{
+    position: absolute;
+    width: 100%;
+    height: 36px;
+    margin-top:35%;
+    font-size: 12px;
+    line-height: 100%;
+    text-align: center;
+    color: #181818;
+}
+
+.render-user{
+    position: relative;
+    padding-right: 5%;
+    padding-left: 5%;
+    top: 7rem;
+    height: fit-content;
+}
+
+/*create-card.js*/
+
+.create-box{
+    position: absolute;
+    width: 290px;
+    height: 75px;
+    margin-top: 2%;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+}
+
+.create-button{
+    position: absolute;
+    width: 80%;
+    height: 32px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    background: #6C63FF;
+    color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(107, 99, 255, 0.377);
+    border-radius: 4px;
+    outline: none;
 }
