--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1298,7 +1298,7 @@ header {
     width: 290px;
     height: 265px;
     margin-top: 2%;
-    background: #FCFDFD;
+    background: #FFFFFF;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
