--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1379,4 +1379,28 @@ header {
 .write{
     position: relative;
     left:26px;
+    top:10%;
+    height: fit-content;
+}
+
+.write input{
+    height: 12px;
+    font-size: 12px;
+}
+
+.send{
+    position: relative;
+    width: fit-content;
+    height: 40px;
+    float: right;
+    right: 5%;
+    top: 20%;
+}
+
+.send-btn{
+    outline: none;
+    border: none;
+    background: none;
+    width: 40px;
+    height: 40px;
 }
