--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -517,16 +517,10 @@ header {
     margin: 10px 0;
     position: relative;
     transform: scale(1);
-    background-color: #e4e4e4;
+    background-color: #FFFFFF;
     transition: transform 0.3s ease-in;
     box-shadow: 1px 3px rgba(143, 143, 143, 0.24);
-}
-
-.card:hover {
-    transform: scale(1.1);
-    z-index: 100;
-    border: none;
-    transition: transform 0.3s ease-in;
+    width: 100%;
 }
 
 .card-fluid {
@@ -1295,6 +1289,7 @@ header {
     box-shadow: 0px 4px 4px rgba(107, 99, 255, 0.377);
     border-radius: 4px;
     outline: none;
+    font-weight: bold;
 }
 
 /*hashtag-box.js*/
