--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -9,5 +9,6 @@
 <div id="root"><%- reactApp %></div>
 <script src="/js/home.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
+<script src="/js/reveal.js" charset="utf-8"></script>
 </body>
 </html>
