--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -304,7 +304,16 @@ a {
 
 .side-middle{
     position: relative;
-    left: 5%;
+    width: 60%;
+    padding: 0 10%;
+}
+
+.side-left{
+    width: 20%;
+}
+
+.side-right{
+    width: 20%;
 }
 
 @media (max-width: 768px) {
@@ -1201,28 +1210,27 @@ header {
 /*user-card.js*/
 
 .user-card{
-    position: relative;
-    width: 290px;
-    height: 280px;
+    width: 230px;
+    height: 230px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
 }
 
 .user-back{
-    position: relative;
-    width: 290px;
-    height: 120px;
+    width: 100%;
+    height: 115px;
     background-color: rgb(191, 188, 245);
     border-radius: 4px 4px 0px 0px;
 }
 
 .user-circle{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    margin-left: 90px;
-    margin-top: 65px;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,0);
     border-radius: 100%;
     background-color: rgb(191, 188, 245);
     background-blend-mode: normal;
@@ -1232,9 +1240,8 @@ header {
 
 .user-name{
     width: 100%;
-    position: absolute;
     height: 25px;
-    margin-top: 25%;
+    margin-top: 15%;
     font-weight: bold;
     color: black;
     text-align: center;
@@ -1243,10 +1250,9 @@ header {
 }
 
 .user-details-home{
-    position: absolute;
     width: 100%;
     height: 36px;
-    margin-top:35%;
+    margin-top:1%;
     font-size: 12px;
     line-height: 100%;
     text-align: center;
@@ -1265,8 +1271,7 @@ header {
 /*create-card.js*/
 
 .create-box{
-    position: relative;
-    width: 290px;
+    width: 230px;
     height: 75px;
     margin-top: 10%;
     background: #FFFFFF;
@@ -1293,9 +1298,8 @@ header {
 /*hashtag-box.js*/
 
 .hashtag-box{
-    position: relative;
-    width: 290px;
-    height: 265px;
+    width: 230px;
+    height: 225px;
     margin-top: 10%;
     background: #FFFFFF;
     border-radius: 4px;
@@ -1303,24 +1307,24 @@ header {
 }
 
 .hash-head{
-    position: absolute;
-    width: fit-content ;
+    position: relative;
+    width: fit-content;
     height: 11px;
     font-size: 12px;
     line-height: 11px;
     text-transform: uppercase;
     color: #181818;
-    margin-top:5%;
-    margin-left: 5%;
+    top: 10%;
+    left: 10%;
     font-weight: bold;
 }
 
 .hash-div{
-    position: absolute;
-    margin-top: 15%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
+    position: relative;
+    top: 15%;
+    left: 10%;
+    right: 10%;
+    bottom: 5%;
     display: flex;
 }
 
@@ -1344,8 +1348,8 @@ header {
 /*user-create-post.js*/
 
 .create-post{
-    position: relative;
-    width: 728px;
+    width: 80%;
+    margin-left: 10%;
     height: 125px;
     background-color: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -1354,8 +1358,8 @@ header {
 
 .create-post-head{
     position: relative;
-    width: 673px;
-    left: 26px;
+    width: 90%;
+    margin-left: 5%;
     border-bottom: 1px solid rgba(107, 99, 255, 0.281);
     height: 44px;
 }
@@ -1482,4 +1486,15 @@ header {
     background: none;
     position: absolute;
     text-decoration: none;
+}
+
+/*follower.js*/
+
+.follower-card{
+    position: relative;
+    width: 290px;
+    height: 245px;
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
 }
